Fixed alignment issue of about row

--- a/app/static/app/content/sitev2.css
+++ b/app/static/app/content/sitev2.css
@@ -584,7 +584,7 @@ body {
     text-decoration: none;
     font-size: 1.1em;
 }
-#about-strip .row{
+#client_logos .row{
     align-items: center;
 }
 #client_logos h4{
